--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
-.col-mgn{
+.col-mgn {
 	padding: 4vh;
-  	margin-bottom: 15px;
+	margin-bottom: 15px;
 }
 
 .text-purple {
@@ -13,4 +13,24 @@
 
 .container {
 	padding: 5vh;
+}
+
+.hover-purple:hover {
+	background-color: #ac8ed6;
+}
+
+.hover-danger:hover {
+	background-color: #dd4124;
+	border-radius: 5px;
+	width: 80%;
+	margin-left: 10px;
+	padding-left: 14px;
+}
+
+.text-yellow {
+	color: RGB(248, 184, 139);
+}
+
+.text-edit {
+	color: #ffbe13;
 }
